<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".splashscreen">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:fontFamily="@font/calligraffitti"
        android:text="Welcome!"
        android:textColor="#E91E63"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview1"
        android:layout_centerInParent="true"
        android:fontFamily="@font/bilbo_swash_caps"
        android:text="@string/splashtext"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#2E209E"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="195dp"
        android:fontFamily="@font/bilbo_swash_caps"
        android:text="@string/marwa"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#B63299"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview2"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="123dp"
        android:fontFamily="@font/bilbo_swash_caps"
        android:text="@string/rahma"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#B63299"
        android:textSize="20sp"
        android:textStyle="italic" />

</RelativeLayout>