<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".precautionactivity" >


<androidx.constraintlayout.widget.ConstraintLayout
android:layout_height="match_parent"
android:layout_width="match_parent"
tools:context=".precautionactivity">


<include
    android:id="@+id/toolbar"
    layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/tv"
            android:layout_width="25dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:text="@string/mains"
            android:textAlignment="textStart"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/mains" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">


        <TextView
            android:id="@+id/tv2"
            android:layout_width="25dp"
            android:layout_height="150dp"
            android:layout_weight="1"

            android:text="@string/metre"
            android:textAlignment="textStart"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

                <ImageView
                    android:id="@+id/iv2"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/metre" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">


        <TextView
            android:id="@+id/tv3"
            android:layout_width="25dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:text="@string/home"
            android:textAlignment="textStart"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

                <ImageView
                    android:id="@+id/iv3"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/home" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">


        <TextView
            android:id="@+id/tv4"
            android:layout_width="25dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:text="@string/bavette"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/bavette" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">


        <TextView
            android:id="@+id/tv5"
            android:layout_width="25dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:text="@string/jour"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

                <ImageView
                    android:id="@+id/iv5"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/jours" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">


        <TextView
            android:id="@+id/tv6"
            android:layout_width="25dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:text="@string/doct"
            android:textAlignment="textStart"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

                <ImageView
                    android:id="@+id/iv6"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/doct" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">


        <TextView
            android:id="@+id/tv7"
            android:layout_width="25dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:text="@string/couvre"
            android:textAlignment="textStart"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

                <ImageView
                    android:id="@+id/iv7"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/tousser" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">


        <TextView
            android:id="@+id/tv8"
            android:layout_width="25dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:text="@string/touchpas"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

                <ImageView
                    android:id="@+id/iv8"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/touchepas" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>